--- a/lsp-settings.json
+++ b/lsp-settings.json
@@ -1,5 +1,8 @@
 {
   "rust": {
     "clippy_preference": "on"
-  }
+  },
+  "rust-analyzer.checkOnSave.overrideCommand": [
+    "cargo", "+nightly", "clippy", "-Z", "unstable-options", "--message-format=json"
+  ]
 }
